# jpseditor

./: .gitignore  .gitlab-ci.yml  404.html  AUTHORS  CHANGELOG  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Gemfile  JuPedSim.pro  README.md  UPedSimGui.pro  _config.yml  aboutme.md  blogs.html  blogs.md  deployAPPLE.sh  index.html  jpseditor.pro  jpseditor.rb  update_version.sh
.github/ISSUE_TEMPLATE/: bug_report.md
Resources/: Info.plist.in  resources.qrc
Resources/inifile_templates/: scenario_10_big_room.xml  scenario_11_sources.xml  scenario_12_waiting_area.xml  scenario_13_schedule.xml  scenario_1_corridor.xml  scenario_5_events.xml  scenario_5_ship.xml  scenario_6_cognitive_map.xml  scenario_7_floorfield.xml  test_1.xml  test_11_gcfm.xml  test_11_gompertz.xml  test_11_krausz.xml  test_12_gcfm.xml  test_12_gompertz.xml  test_12_krausz.xml  test_14_tordeux2015.xml  test_15_tordeux2015.xml  test_1_tordeux2015.xml  test_2_gcfm.xml  test_2_gompertz.xml  test_2_tordeux2015.xml  test_3_tordeux2015.xml  test_4_gcfm.xml  test_4_gompertz.xml  test_4_tordeux2015.xml  test_5_tordeux2015.xml  test_6_tordeux2015.xml  test_8_gcfm.xml  test_8_gompertz.xml  test_8_krausz.xml  test_8_tordeux2015.xml
_layouts/: wiki.html
_posts/: 2018-09-02-JPSeditor_Roadmap.md  2018-09-02-JPSeditor_roadmap.md  2018-09-03-quickstart.md  2018-10-02-Known_Issue_1.md  2018-10-02-known_Issue_1.md  2018-10-03-release_v084.md  2018-10-03-what_is_new_v084.md  2018-10-17-develop_JPSeditor.md  2018-10-19-naming_style.md  2018-10-29-release_v085.md  2019-01-08-release_v086.md  2019-03-08-release_v087.md  2019-05-03-release_v088.md  DXF_importer.md  JPSeditor_Roadmap.md
_site/: 404.html  feed.xml  index.html  robots.txt  sitemap.xml
_site/aboutme/: index.html
_site/tags/: index.html
dxflib/: dxflib_commercial_license.txt
dxflib/src/: dl_dxf.cpp  dl_dxf.h  dl_writer.h  dl_writer_ascii.h
examples/1_tutorial/: tutorial.xml
examples/2_mixedusage/: mixedusage.dwg  mixedusage.dxf  mixedusage.xml
examples/3_bottleneck/: geometry.xml
forms/: Ressource.qrc  addlayerdialog.cpp  addlayerdialog.h  addlayerdialog.ui  attributetabwidget.cpp  attributetabwidget.h  attributetabwidget.ui  basicZoneWidget.ui  basicpropertywidget.ui  goalwidget.ui  inifilewidget.ui  layerwidget.cpp  layerwidget.h  layerwidget.ui  listwidget.ui  mainwindow.ui  opendxfdialog.ui  platformpropertywidget.ui  propertywidget.ui  roomlistwidget.ui  roompropertywidget.ui  roomwidget.ui  runningwidget.ui  settingdialog.ui  snappingoptions.ui  sourcewidget.ui  templatewidget.ui  trackpropertywidget.ui  transitionwidget.ui  widgetlandmark.ui  widgetsettings.ui
icons/: jpseditor.rc  jupedsim.icns
src/: GraphicView.cpp  GraphicView.h  JPSSource.cpp  JPSSource.h  attributetabwidget.cpp  attributetabwidget.h  datamanager.cpp  datamanager.h  dtrace.h  elementtypes.h  elementtyps.h  global.cpp  global.h  graphicscene.cpp  graphicscene.h  inifilewidget.cpp  inifilewidget.h  jpsLineItem.cpp  jpsLineItem.h  jpsconnection.cpp  jpsconnection.h  jpscrossing.cpp  jpscrossing.h  jpselementlistmodel.cpp  jpselementlistmodel.h  jpsexit.cpp  jpsexit.h  jpsgoal.cpp  jpsgoal.h  jpslandmark.cpp  jpslandmark.h  jpsobstacle.cpp  jpsobstacle.h  jpsregion.cpp  jpsregion.h  jpssource.cpp  jpssource.h  jpstrack.cpp  jpstrack.h  jpstransition.cpp  (+22 more)
src/AutomaticRoomIdentification/: djsf.h  roomID.h  roomdefinition.cpp  roomdefinition.h  roomidentification.cpp  roomidentification.h
src/AutomaticRoomIdentification/Eigen/: Cholesky  Core  Eigenvalues  Geometry  Householder  Jacobi  LU  QR  SVD
src/AutomaticRoomIdentification/Eigen/src/Cholesky/: LDLT.h  LLT.h
src/AutomaticRoomIdentification/Eigen/src/Core/: Array.h  ArrayBase.h  ArrayWrapper.h  Assign.h  AssignEvaluator.h  BandMatrix.h  Block.h  BooleanRedux.h  CommaInitializer.h  ConditionEstimator.h  CoreEvaluators.h  CoreIterators.h  CwiseBinaryOp.h  CwiseNullaryOp.h  CwiseTernaryOp.h  CwiseUnaryOp.h  CwiseUnaryView.h  DenseBase.h  DenseCoeffsBase.h  DenseStorage.h  Diagonal.h  DiagonalMatrix.h  DiagonalProduct.h  Dot.h  EigenBase.h  Fuzzy.h  GeneralProduct.h  GenericPacketMath.h  GlobalFunctions.h  IO.h  Inverse.h  Map.h  MapBase.h  MathFunctions.h  MathFunctionsImpl.h  Matrix.h  MatrixBase.h  NestByValue.h  NoAlias.h  NumTraits.h  (+25 more)
src/AutomaticRoomIdentification/Eigen/src/Eigenvalues/: ComplexEigenSolver.h  ComplexSchur.h  EigenSolver.h  GeneralizedEigenSolver.h  GeneralizedSelfAdjointEigenSolver.h  HessenbergDecomposition.h  MatrixBaseEigenvalues.h  RealQZ.h  RealSchur.h  SelfAdjointEigenSolver.h  Tridiagonalization.h
src/AutomaticRoomIdentification/Eigen/src/Geometry/: AlignedBox.h  AngleAxis.h  EulerAngles.h  Homogeneous.h  Hyperplane.h  OrthoMethods.h  Quaternion.h  (+7 more)
src/Deprecated Class/: jpscrossing.h  templatewidget.h  widgetsettings.cpp  widgetsettings.h
src/UndoFramework/: action.cpp  action.h  actionstack.cpp  actionstack.h  lineaction.cpp  lineaction.h  paintaction.cpp  paintaction.h
src/XML/: goalreader.cpp  goalreader.h  inireader.cpp  inireader.h  sourcereader.cpp  sourcereader.h
src/models/: jpselementlistmodel.cpp  jpselementlistmodel.h  jpsgoallistmodel.cpp  jpsgoallistmodel.h  jpssourcelistmodel.cpp  jpssourcelistmodel.h  layer.cpp  layer.h
src/tinyxml/: tinyxml.h  tinyxmlerror.cpp
src/widgets/: basicpropertywidget.cpp  basicpropertywidget.h  basiczonewidget.cpp  basiczonewidget.h  goalwidget.cpp  goalwidget.h  inifilewidget.cpp  inifilewidget.h  layerwidget.cpp  layerwidget.h  listwidget.cpp  listwidget.h  opendxfdialog.cpp  opendxfdialog.h  platformpropertywidget.cpp  platformpropertywidget.h  propertywidget.cpp  propertywidget.h  roomlistwidget.cpp  roomlistwidget.h  roomwidget.cpp  roomwidget.h  runningwidget.cpp  runningwidget.h  settingdialog.cpp  settingdialog.h  snappingoptions.cpp  snappingoptions.h  sourcewidget.cpp  sourcewidget.h  templatewidget.cpp  trackpropertywidget.cpp  trackpropertywidget.h  transitionwidget.cpp  transitionwidget.h  widgetlandmark.cpp  widgetlandmark.h  widgetsettings.cpp
utest/dxf/: DXF-Layer1.dxf  DXF-Layer2.dxf  DXF-Layer3.dxf
(+62 files in other folders)
